testsuite/poke.pkl/fun-types-diag-1.pk
/* { dg-do compile } */

deftype Callback = (int,...,int)int; /* { dg-error "" } */
